Lab4/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error CompSt
    8       | error SEMI
    9       | Specifier error SEMI
   10       | Specifier error CompSt

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC DefList error RC

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI
   38     | error Stmt
   39     | Exp error
   40     | IF LP error RP Stmt
   41     | IF LP error RP Stmt ELSE Stmt
   42     | WHILE LP error RP Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList error SEMI
   47    | Specifier error SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | Exp ASSIGNOP error
   71    | Exp AND error
   72    | Exp OR error
   73    | Exp RELOP error
   74    | Exp PLUS error
   75    | Exp MINUS error
   76    | Exp STAR error
   77    | Exp DIV error
   78    | LP error RP
   79    | LP Exp error
   80    | MINUS error
   81    | NOT error
   82    | ID LP error RP
   83    | Exp LB error RB

   84 Args: Exp COMMA Args
   85     | Exp
   86     | error COMMA Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 10 17 37 38 39 40 41 42 46 47 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 86
INT (258) 22 68
FLOAT (259) 69
ID (260) 18 20 21 23 24 63 64 66 67 82
SEMI (261) 4 5 8 9 31 33 37 45 46 47
COMMA (262) 12 25 49 84 86
ASSIGNOP (263) 51 52 70
RELOP (264) 55 73
PLUS (265) 56 74
MINUS (266) 57 61 75 80
STAR (267) 58 76
DIV (268) 59 77
AND (269) 53 71
OR (270) 54 72
NOT (271) 62 81
DOT (272) 66
TYPE (273) 13
LP (274) 23 24 34 35 36 40 41 42 60 63 64 78 79 82
RP (275) 23 24 34 35 36 40 41 42 60 63 64 78 82
LB (276) 22 65 83
RB (277) 22 65 83
LC (278) 15 17 28
RC (279) 15 17 28
STRUCT (280) 15 16 17
RETURN (281) 33
IF (282) 34 35 40 41
ELSE (283) 35 41
WHILE (284) 36 42
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    左： 0
Program (33)
    左： 1, 右： 0
ExtDefList (34)
    左： 2 3, 右： 1 2
ExtDef (35)
    左： 4 5 6 7 8 9 10, 右： 2
ExtDecList (36)
    左： 11 12, 右： 4 12
Specifier (37)
    左： 13 14, 右： 4 5 6 9 10 27 45 46 47
StructSpecifier (38)
    左： 15 16 17, 右： 14
OptTag (39)
    左： 18 19, 右： 15 17
Tag (40)
    左： 20, 右： 16
VarDec (41)
    左： 21 22, 右： 11 12 22 27 50 51
FunDec (42)
    左： 23 24, 右： 6
VarList (43)
    左： 25 26, 右： 23 25
ParamDec (44)
    左： 27, 右： 25 26
CompSt (45)
    左： 28, 右： 6 7 10 32
StmtList (46)
    左： 29 30, 右： 28 29
Stmt (47)
    左： 31 32 33 34 35 36 37 38 39 40 41 42, 右： 29 34 35 36
    38 40 41 42
DefList (48)
    左： 43 44, 右： 15 17 28 43
Def (49)
    左： 45 46 47, 右： 43
DecList (50)
    左： 48 49, 右： 45 46 49
Dec (51)
    左： 50 51, 右： 48 49
Exp (52)
    左： 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82 83, 右： 31 33 34 35 36 39
    51 52 53 54 55 56 57 58 59 60 61 62 65 66 70 71 72 73 74 75 76
    77 79 83 84 85 86
Args (53)
    左： 84 85 86, 右： 63 84


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . CompSt
    8       | error . SEMI

    SEMI  shift, and go to state 9
    LC    shift, and go to state 10

    CompSt  转到状态 11


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 12

    $default  reduce using rule 19 (OptTag)

    OptTag  转到状态 13
    Tag     转到状态 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 16
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    9       | Specifier . error SEMI
   10       | Specifier . error CompSt

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 19

    ExtDecList  转到状态 20
    VarDec      转到状态 21
    FunDec      转到状态 22


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        转到状态 23
    StructSpecifier  转到状态 8
    DefList          转到状态 24
    Def              转到状态 25


State 11

    7 ExtDef: error CompSt .

    $default  reduce using rule 7 (ExtDef)


State 12

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 13

   15 StructSpecifier: STRUCT OptTag . LC DefList RC
   17                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 26


State 14

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  接受


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

    9 ExtDef: Specifier error . SEMI
   10       | Specifier error . CompSt

    SEMI  shift, and go to state 27
    LC    shift, and go to state 10

    CompSt  转到状态 28


State 18

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 29

    $default  reduce using rule 21 (VarDec)


State 19

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 30


State 21

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 31
    LB     shift, and go to state 32

    $default  reduce using rule 11 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 10

    CompSt  转到状态 33


State 23

   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error SEMI
   47    | Specifier . error SEMI

    error  shift, and go to state 34
    ID     shift, and go to state 35

    VarDec   转到状态 36
    DecList  转到状态 37
    Dec      转到状态 38


State 24

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 39
    INT     shift, and go to state 40
    FLOAT   shift, and go to state 41
    ID      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    LP      shift, and go to state 45
    LC      shift, and go to state 10
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 49
    StmtList  转到状态 50
    Stmt      转到状态 51
    Exp       转到状态 52


State 25

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        转到状态 23
    StructSpecifier  转到状态 8
    DefList          转到状态 53
    Def              转到状态 25


State 26

   15 StructSpecifier: STRUCT OptTag LC . DefList RC
   17                | STRUCT OptTag LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        转到状态 23
    StructSpecifier  转到状态 8
    DefList          转到状态 54
    Def              转到状态 25


State 27

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 28

   10 ExtDef: Specifier error CompSt .

    $default  reduce using rule 10 (ExtDef)


State 29

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 55
    STRUCT  shift, and go to state 3

    Specifier        转到状态 56
    StructSpecifier  转到状态 8
    VarList          转到状态 57
    ParamDec         转到状态 58


State 30

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 31

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  转到状态 59
    VarDec      转到状态 21


State 32

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 60


State 33

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 34

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 61


State 35

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 36

   22 VarDec: VarDec . LB INT RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62
    LB        shift, and go to state 32

    $default  reduce using rule 50 (Dec)


State 37

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error SEMI

    error  shift, and go to state 63
    SEMI   shift, and go to state 64


State 38

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 48 (DecList)


State 39

   37 Stmt: error . SEMI
   38     | error . Stmt

    error   shift, and go to state 39
    INT     shift, and go to state 40
    FLOAT   shift, and go to state 41
    ID      shift, and go to state 42
    SEMI    shift, and go to state 66
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    LP      shift, and go to state 45
    LC      shift, and go to state 10
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48

    CompSt  转到状态 49
    Stmt    转到状态 67
    Exp     转到状态 52


State 40

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 41

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 42

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   82    | ID . LP error RP

    LP  shift, and go to state 68

    $default  reduce using rule 67 (Exp)


State 43

   61 Exp: MINUS . Exp
   80    | MINUS . error

    error  shift, and go to state 69
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 70


State 44

   62 Exp: NOT . Exp
   81    | NOT . error

    error  shift, and go to state 71
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 72


State 45

   60 Exp: LP . Exp RP
   78    | LP . error RP
   79    | LP . Exp error

    error  shift, and go to state 73
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 74


State 46

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 75


State 47

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP Stmt
   41     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 76


State 48

   36 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 77


State 49

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 50

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 51

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 39
    INT     shift, and go to state 40
    FLOAT   shift, and go to state 41
    ID      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    LP      shift, and go to state 45
    LC      shift, and go to state 10
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 49
    StmtList  转到状态 79
    Stmt      转到状态 51
    Exp       转到状态 52


State 52

   31 Stmt: Exp . SEMI
   39     | Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    error     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 53

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 54

   15 StructSpecifier: STRUCT OptTag LC DefList . RC
   17                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 92
    RC     shift, and go to state 93


State 55

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 56

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  转到状态 94


State 57

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 95


State 58

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 96

    $default  reduce using rule 26 (VarList)


State 59

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 60

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 97


State 61

   47 Def: Specifier error SEMI .

    $default  reduce using rule 47 (Def)


State 62

   51 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 98


State 63

   46 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 99


State 64

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 65

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   转到状态 36
    DecList  转到状态 100
    Dec      转到状态 38


State 66

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 67

   38 Stmt: error Stmt .

    $default  reduce using rule 38 (Stmt)


State 68

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   82    | ID LP . error RP

    error  shift, and go to state 101
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    RP     shift, and go to state 102

    Exp   转到状态 103
    Args  转到状态 104


State 69

   80 Exp: MINUS error .

    $default  reduce using rule 80 (Exp)


State 70

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 61 (Exp)


State 71

   81 Exp: NOT error .

    $default  reduce using rule 81 (Exp)


State 72

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 62 (Exp)


State 73

   78 Exp: LP error . RP

    RP  shift, and go to state 105


State 74

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   79    | LP Exp . error
   83    | Exp . LB error RB

    error     shift, and go to state 106
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 107
    LB        shift, and go to state 91


State 75

   33 Stmt: RETURN Exp . SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 76

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . error RP Stmt
   41     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 109
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 110


State 77

   36 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error RP Stmt

    error  shift, and go to state 111
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 112


State 78

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 79

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 80

   39 Stmt: Exp error .

    $default  reduce using rule 39 (Stmt)


State 81

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 82

   52 Exp: Exp ASSIGNOP . Exp
   70    | Exp ASSIGNOP . error

    error  shift, and go to state 113
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 114


State 83

   55 Exp: Exp RELOP . Exp
   73    | Exp RELOP . error

    error  shift, and go to state 115
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 116


State 84

   56 Exp: Exp PLUS . Exp
   74    | Exp PLUS . error

    error  shift, and go to state 117
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 118


State 85

   57 Exp: Exp MINUS . Exp
   75    | Exp MINUS . error

    error  shift, and go to state 119
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 120


State 86

   58 Exp: Exp STAR . Exp
   76    | Exp STAR . error

    error  shift, and go to state 121
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 122


State 87

   59 Exp: Exp DIV . Exp
   77    | Exp DIV . error

    error  shift, and go to state 123
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 124


State 88

   53 Exp: Exp AND . Exp
   71    | Exp AND . error

    error  shift, and go to state 125
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 126


State 89

   54 Exp: Exp OR . Exp
   72    | Exp OR . error

    error  shift, and go to state 127
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 128


State 90

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 129


State 91

   65 Exp: Exp LB . Exp RB
   83    | Exp LB . error RB

    error  shift, and go to state 130
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45

    Exp  转到状态 131


State 92

   17 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 132


State 93

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 94

   22 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 32

    $default  reduce using rule 27 (ParamDec)


State 95

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 96

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 56
    StructSpecifier  转到状态 8
    VarList          转到状态 133
    ParamDec         转到状态 58


State 97

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 98

   51 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 51 (Dec)


State 99

   46 Def: Specifier DecList error SEMI .

    $default  reduce using rule 46 (Def)


State 100

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 101

   82 Exp: ID LP error . RP
   86 Args: error . COMMA Exp

    COMMA  shift, and go to state 134
    RP     shift, and go to state 135


State 102

   64 Exp: ID LP RP .

    $default  reduce using rule 64 (Exp)


State 103

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB
   84 Args: Exp . COMMA Args
   85     | Exp .

    COMMA     shift, and go to state 136
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 85 (Args)


State 104

   63 Exp: ID LP Args . RP

    RP  shift, and go to state 137


State 105

   78 Exp: LP error RP .

    $default  reduce using rule 78 (Exp)


State 106

   79 Exp: LP Exp error .

    $default  reduce using rule 79 (Exp)


State 107

   60 Exp: LP Exp RP .

    $default  reduce using rule 60 (Exp)


State 108

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 109

   40 Stmt: IF LP error . RP Stmt
   41     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 138


State 110

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   83    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 139
    LB        shift, and go to state 91


State 111

   42 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 140


State 112
